--- a/pages/winprob/templates/country_list.html
+++ b/pages/winprob/templates/country_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Countries{% endblock %}
 
@@ -14,7 +15,7 @@
         <tbody>
             {% for country in country_list %}
             <tr>
-                <td><a href="{{ country.get_absolute_url }}">{{ country.country_name }}</a></td>
+                <td><a href="{{ country.get_absolute_url }}">{{ country.name }}<img class='flagicon' src="/static/img/{{ country.slug }}.png" /></a></td>
                 <td>{{ country.num_teams }}</td>
             </tr>
             {% endfor %}
