--- a/pages/winprob/templates/country_teams_list.html
+++ b/pages/winprob/templates/country_teams_list.html
@@ -3,7 +3,7 @@
 {% block title %}Teams{% endblock %}
 
 {% block content %}
-    <h2>Teams from {{ country.country_name }}</h2>
+    <h2>Teams from {{ country.name }}<img class='flagicon' src="/static/img/{{ country.slug }}.png" /></h2>
     <table id="teams" class="display" style="width:100%">
         <thead>
             <tr>
@@ -13,7 +13,7 @@
         <tbody>
             {% for team in country_teams_list %}
             <tr>
-                <td><a href="{{ team.get_absolute_url }}">{{ team.team_name }}</a></td>
+                <td><a href="{{ team.get_absolute_url }}">{{ team.name }}</a></td>
             </tr>
             {% endfor %}
         </tbody>
