--- a/pages/winprob/templates/country_list.html
+++ b/pages/winprob/templates/country_list.html
@@ -4,7 +4,7 @@
 {% block title %}Countries{% endblock %}
 
 {% block content %}
-    <h2>Countries</h2>
+    {% comment %}
     <table id="teams" class="display" style="width:100%">
         <thead>
             <tr>
@@ -21,4 +21,15 @@
             {% endfor %}
         </tbody>
     </table>
+    {% endcomment %}
+    <h2>Countries</h2>
+    <div class='container'>
+        <div class='row'>
+        {% for country in country_list %}
+            <div class='col-md-3' style='border:solid'>
+                <p>{{ country.name }}<a href="{{ country.get_absolute_url }}"><img class='flagicon' src="/static/img/{{ country.slug }}.png" /></a></p>
+            </div>
+        {% endfor %}
+        </div>
+    </div>
 {% endblock %}
