--- a/pages/winprob/templates/base.html
+++ b/pages/winprob/templates/base.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="{% url 'homepage' %}">Two-legged tie win probability</a>
+      <a class="navbar-brand" href="{% url 'homepage' %}">Win probability</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,10 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'teamlist' %}">Teams <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'countrylist' %}">Countries</a>
+            <a class="nav-link" href="{% url 'teamlist' %}">Teams</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'tieslist' %}">Ties</a>
@@ -38,7 +35,7 @@
       </div>
     </nav>
 
-    <div class='content' style="padding: 5rem 2rem">
+    <div class='content'>
       {% block content %}
       {% endblock %}
     </div>
