--- a/pages/winprob/templates/ties_list.html
+++ b/pages/winprob/templates/ties_list.html
@@ -3,44 +3,8 @@
 {% block title %}Ties{% endblock %}
 
 {% block content %}
-    <div class='container'>
-      <h3>All two-legged ties</h3>
-      <div class='row'>
-        <div class='col-12 legend'>
-          <div class='row'>
-            <div class='col-auto tiedetail cl'>Champions Lg.</div>
-            <div class='col-auto tiedetail el'>Europa Lg.</div>
-            <div class='col-auto tiedetail knockout'>Knockout Rd.</div>
-          </div>
-        </div>
-        {% for tie in ties %}
-        <div class='col-lg-6'>
-
-          <div class='tiedetail col-12 {{ tie.competition }} {% if tie.is_knockout %}knockout{% endif %}'>
-            <p class='blockheader'>
-              {{ tie.season }}<br />
-              {{ tie.get_clean_competition }}<br />
-              {{ tie.get_stage_name }}
-            </p>
-
-            <div class='row result'>
-              <div class="col-5">
-                <p class='team one text-right'><img class='flagicon' src="/static/img/{{ tie.team1.country.slug }}.png" /><a href="{{ tie.team1.get_absolute_url }}">{{ tie.team1.short_name }}</a></p>
-              </div>
-              <div class="col-2">
-                <p class='result text-center'>0-0</p>
-              </div>
-              <div class="col-5">
-                <p class='team two'><a href="{{ tie.team2.get_absolute_url }}">{{ tie.team2.short_name }}</a><img class='flagicon' src="/static/img/{{ tie.team2.country.slug }}.png" /></p>
-              </div>
-              <div class='col-12'>
-                <p>{{ tie.result }}</p>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-        {% endfor %}
-    </div>
+<div class='container'>
+  <h3>All two-legged ties</h3>
+  {% include "tie_loop.html" %}
+</div>
 {% endblock %}
