--- a/pages/winprob/templates/tie_detail.html
+++ b/pages/winprob/templates/tie_detail.html
@@ -17,13 +17,20 @@
 
 {% block extrajs %}
 <script src="{% static 'js/d3.v5.min.js' %}"></script>
-<script src="{% static 'js/custom.js' %}"></script>
+<script src="{% static 'js/winProbChart.js' %}"></script>
 <script>
-  app.winProbData = {{ preds|safe }}
+  app.winProbData = {{ preds|safe }};
+  app.tieEvents = {{ events|safe }};
+  app.team1short = "{{ tie.team1.short_name|safe }}";
+  app.team2short = "{{ tie.team2.short_name|safe }}";
 </script>
 <script type="text/javascript">
 $(function () {
     app.resize();
 });
 </script>
+{% endblock %}
+
+{% block extracss %}
+<link rel="stylesheet" href="{% static 'css/winProbChart.css' %}">
 {% endblock %}
