--- a/pages/winprob/templates/tie_loop.html
+++ b/pages/winprob/templates/tie_loop.html
@@ -1,15 +1,114 @@
-<div class='row'>
-  {% if not showlegend %}
-  <div class='col-12 legend'>
-    <div class='row'>
-      <div class='col-auto tiedetail cl'>Champions Lg.</div>
-      <div class='col-auto tiedetail el'>Europa Lg.</div>
-      <div class='col-auto tiedetail knockout'>Knockout Rd.</div>
+<div class='row legend'>
+  <div class='col-12 header'>
+    <p>Legend</p>
+  </div>
+  <div class='col-12 key'>
+    <div class='row items'>
+      <div class='col-auto cl'><p class='text-left'>Champions Lg.</p></div>
+      <div class='w-100 d-lg-none'></div>
+      <div class='col-auto el'><p class='text-left'>Europa Lg.</p></div>
+      <div class='w-100 d-lg-none'></div>
+      <div class='col-auto knockout'><p class='text-left'>Knockout Rd.</p></div>
     </div>
   </div>
-  {% endif %}
+  <div class='col-12 notes'>
+    <p>agr: Tie decided by <a href="">away goals rule</a></p>
+    <p>aet: Tie decided <a href="">after extra time</a></p>
+    <p>pk: Tie decided by <a href="">penalty kicks</a></p>
+  </div>
+</div>
+
+{% for tie in ties %}
+<!-- one row per tie -->
+<div class='row tie {{ tie.competition }}{% if tie.is_knockout %} knockout{% endif %}'>
+  <!-- year and round -->
+  <div class='col-lg-4'>
+    <div class='row'>
+      <div class='col-lg-5'><p class='text-center text-lg-left'>{{ tie.season }} {{ tie.get_clean_competition }}</p></div>
+      <!-- <div class='col-lg-2'><p class='text-center text-lg-left'></p></div> -->
+      <div class='col-lg-7'><p class='text-center text-lg-left'>{{ tie.get_stage_name }}</p></div>
+    </div>
+  </div>
+
+  <!-- teams and score -->
+  <div class='col-lg-7'>
+    <div class='row'>
+      <div class='col-5'>
+        <p class='team one text-right'>
+          <img class='flagicon' src="/static/img/{{ tie.team1.country.slug }}.png" />
+          {% if source_template == 'team' and tie.team1.fbrefid == team.fbrefid %}
+          {{ tie.team1.short_name }}
+          {% else %}
+          <a href="{{ tie.team1.get_absolute_url }}">{{ tie.team1.short_name }}</a>
+          {% endif %}
+        </p>
+      </div>
+      <div class='col-2'>
+        <p class='result text-center'>
+          <a href='{{ tie.get_absolute_url }}'>
+          {% if tie.in_progress %}
+            TBD
+          {% else %}
+            {{ tie.aggscore_t1 }}{% if tie.away_goals_rule or tie.penalty_kicks %}{% if tie.t1win %}*{% endif %}{% endif %}-{{ tie.aggscore_t2 }}{% if tie.away_goals_rule or tie.penalty_kicks %}{% if not tie.t1win %}*{% endif %}{% endif %}
+          {% endif %}
+          </a>
+        </p>
+      </div>
+      <div class='col-5'>
+          <p class='team two'>
+            {% if source_template == 'team' and tie.team2.fbrefid == team.fbrefid %}
+            {{ tie.team2.short_name }}
+            {% else %}
+            <a href="{{ tie.team2.get_absolute_url }}">{{ tie.team2.short_name }}</a>
+            {% endif %}
+            <img class='flagicon' src="/static/img/{{ tie.team2.country.slug }}.png" />
+          </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- notes (agr/aet) -->
+  <div class='col-lg-1'>
+    <div class='row'>
+      {% if tie.away_goals_rule %}
+      <div class='col-lg-4'>
+        <p class='text-center'>agr</p>
+      </div>
+      {% endif %}
+      {% if tie.after_extra_time %}
+      <div class='col-lg-4'>
+        <p class='text-center'>aet</p>
+      </div>
+      {% endif %}
+      {% if tie.penalty_kicks %}
+      <div class='col-lg-4'>
+        <p class='text-center'>pk</p>
+      </div>
+      {% endif %}
+    </div>
+  </div>
+</div>
+{% endfor %}
+
+
+
+
+{% comment %}
+{% if not showlegend %}
+<div class='row'>
+  <!-- <div class='col-12 legend'> -->
+    <!-- <div class='row'> -->
+      <div class='col tiedetail cl'>Champions Lg.</div>
+      <div class='col tiedetail el'>Europa Lg.</div>
+      <div class='col tiedetail knockout'>Knockout Rd.</div>
+    <!-- </div> -->
+  <!-- </div> -->
+</div>
+{% endif %}
+
+<div class='row'>
   {% for tie in ties %}
-  <div class='col-lg-6'>
+  <div class='col-lg-12'>
     <div class='tiedetail col-12 {{ tie.competition }} {% if tie.is_knockout %}knockout{% endif %}'>
       <p class='blockheader'>
         {{ tie.season }}<br />
@@ -53,3 +152,4 @@
   </div>
   {% endfor %}
 </div>
+{% endcomment %}
