--- a/pages/winprob/templates/base.html
+++ b/pages/winprob/templates/base.html
@@ -13,6 +13,7 @@
 
     <title>{% block title %}{% endblock %} - Win probability</title>
   </head>
+
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="{% url 'homepage' %}">Win probability</a>
@@ -33,8 +34,9 @@
     </nav>
 
     <div class='content'>
-      {% block content %}
-      {% endblock %}
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
 
     <script src="{% static 'js/jquery-3.5.1.slim.min.js' %}"></script>
