--- a/pages/winprob/templates/tie_loop.html
+++ b/pages/winprob/templates/tie_loop.html
@@ -1,9 +1,10 @@
+{% if not showlegend %}
 <div class='row legend'>
   <div class='col-12 header'>
     <p>Legend</p>
   </div>
   <div class='col-12 key'>
-    <div class='row items'>
+    <div class='row'>
       <div class='col-auto cl'><p class='text-left'>Champions Lg.</p></div>
       <div class='w-100 d-lg-none'></div>
       <div class='col-auto el'><p class='text-left'>Europa Lg.</p></div>
@@ -17,34 +18,46 @@
     <p>pk: Tie decided by <a href="">penalty kicks</a></p>
   </div>
 </div>
+{% endif %}
 
-{% for tie in ties %}
 <!-- one row per tie -->
+{% for tie in ties %}
 <div class='row tie {{ tie.competition }}{% if tie.is_knockout %} knockout{% endif %}'>
   <!-- year and round -->
-  <div class='col-lg-4'>
+  <div class='col-lg-4 metadata'>
     <div class='row'>
-      <div class='col-lg-5'><p class='text-center text-lg-left'>{{ tie.season }} {{ tie.get_clean_competition }}</p></div>
-      <!-- <div class='col-lg-2'><p class='text-center text-lg-left'></p></div> -->
-      <div class='col-lg-7'><p class='text-center text-lg-left'>{{ tie.get_stage_name }}</p></div>
+      <div class='col-lg-5 season'>
+        <p class='text-center text-lg-left'>{{ tie.season }} {{ tie.get_clean_competition }}</p>
+      </div>
+      <div class='col-lg-7 stage'>
+        <p class='text-center text-lg-left'>{{ tie.get_stage_name }}</p>
+      </div>
     </div>
   </div>
 
   <!-- teams and score -->
-  <div class='col-lg-7'>
-    <div class='row'>
-      <div class='col-5'>
-        <p class='team one text-right'>
-          <img class='flagicon' src="/static/img/{{ tie.team1.country.slug }}.png" />
-          {% if source_template == 'team' and tie.team1.fbrefid == team.fbrefid %}
-          {{ tie.team1.short_name }}
-          {% else %}
-          <a href="{{ tie.team1.get_absolute_url }}">{{ tie.team1.short_name }}</a>
-          {% endif %}
-        </p>
+  <div class='col-lg-7 summary'>
+    <div class='row justify-content-center align-items-center'>
+      <div class='col-4 team one'>
+        <div class='row justify-content-end align-items-center'>
+          <div class='col-auto flag'>
+            <img class='flagicon' src="/static/img/{{ tie.team1.country.slug }}.png" />
+          </div>
+          <div class='w-100 d-lg-none'></div>
+          <div class='col-auto name'>
+            <p class='text-right'>
+              {% if source_template == 'team' and tie.team1.fbrefid == team.fbrefid %}
+              {{ tie.team1.short_name }}
+              {% else %}
+              <a href="{{ tie.team1.get_absolute_url }}">{{ tie.team1.short_name }}</a>
+              {% endif %}
+            </p>
+          </div>
+        </div>
       </div>
-      <div class='col-2'>
-        <p class='result text-center'>
+
+      <div class='col-auto result'>
+        <p class='text-center'>
           <a href='{{ tie.get_absolute_url }}'>
           {% if tie.in_progress %}
             TBD
@@ -54,21 +67,30 @@
           </a>
         </p>
       </div>
-      <div class='col-5'>
-          <p class='team two'>
-            {% if source_template == 'team' and tie.team2.fbrefid == team.fbrefid %}
-            {{ tie.team2.short_name }}
-            {% else %}
-            <a href="{{ tie.team2.get_absolute_url }}">{{ tie.team2.short_name }}</a>
-            {% endif %}
+
+      <div class='col-4 team two'>
+        <div class='row justify-content-start align-items-center'>
+          <div class='col-auto name'>
+            <p class='text-left'>
+              {% if source_template == 'team' and tie.team2.fbrefid == team.fbrefid %}
+              {{ tie.team2.short_name }}
+              {% else %}
+              <a href="{{ tie.team2.get_absolute_url }}">{{ tie.team2.short_name }}</a>
+              {% endif %}
+            </p>
+          </div>
+          <div class='w-100 d-lg-none'></div>
+          <div class='col-auto flag'>
             <img class='flagicon' src="/static/img/{{ tie.team2.country.slug }}.png" />
-          </p>
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
 
   <!-- notes (agr/aet) -->
-  <div class='col-lg-1'>
+  <div class='col-lg-1 notes'>
     <div class='row'>
       {% if tie.away_goals_rule %}
       <div class='col-lg-4'>
@@ -89,67 +111,3 @@
   </div>
 </div>
 {% endfor %}
-
-
-
-
-{% comment %}
-{% if not showlegend %}
-<div class='row'>
-  <!-- <div class='col-12 legend'> -->
-    <!-- <div class='row'> -->
-      <div class='col tiedetail cl'>Champions Lg.</div>
-      <div class='col tiedetail el'>Europa Lg.</div>
-      <div class='col tiedetail knockout'>Knockout Rd.</div>
-    <!-- </div> -->
-  <!-- </div> -->
-</div>
-{% endif %}
-
-<div class='row'>
-  {% for tie in ties %}
-  <div class='col-lg-12'>
-    <div class='tiedetail col-12 {{ tie.competition }} {% if tie.is_knockout %}knockout{% endif %}'>
-      <p class='blockheader'>
-        {{ tie.season }}<br />
-        {{ tie.get_clean_competition }}<br />
-        {{ tie.get_stage_name }}
-      </p>
-      <div class='row result'>
-        <div class="col-5">
-          <p class='team one text-right'>
-            <img class='flagicon' src="/static/img/{{ tie.team1.country.slug }}.png" />
-            {% if source_template == 'team' and tie.team1.fbrefid == team.fbrefid %}
-            {{ tie.team1.short_name }}
-            {% else %}
-            <a href="{{ tie.team1.get_absolute_url }}">{{ tie.team1.short_name }}</a>
-            {% endif %}
-          </p>
-        </div>
-        <div class="col-2">
-          <p class='result text-center'>
-            <a href='{{ tie.get_absolute_url }}'>
-            {% if tie.in_progress %}
-            TBD
-            {% else %}
-              {{ tie.aggscore_t1 }}{% if tie.away_goals_rule or tie.penalty_kicks %}{% if tie.t1win %}*{% endif %}{% endif %}-{{ tie.aggscore_t2 }}{% if tie.away_goals_rule or tie.penalty_kicks %}{% if not tie.t1win %}*{% endif %}{% endif %}{% if tie.away_goals_rule %}<br />agr{% endif %}{% if tie.after_extra_time and not tie.penalty_kicks %}<br />aet{% endif %}{% if tie.penalty_kicks %}<br />pk{% endif %}
-            {% endif %}
-            </a>
-          </p>
-        </div>
-        <div class="col-5">
-          <p class='team two'>
-            {% if source_template == 'team' and tie.team2.fbrefid == team.fbrefid %}
-            {{ tie.team2.short_name }}
-            {% else %}
-            <a href="{{ tie.team2.get_absolute_url }}">{{ tie.team2.short_name }}</a>
-            {% endif %}
-            <img class='flagicon' src="/static/img/{{ tie.team2.country.slug }}.png" />
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  {% endfor %}
-</div>
-{% endcomment %}
