--- a/pages/winprob/templates/aet_list.html
+++ b/pages/winprob/templates/aet_list.html
@@ -2,4 +2,5 @@
 
 {% block title %}Ties decided after extra time{% endblock %}
 {% block headline %}Extra time{% endblock %}
-{% block description %}A list of {{ ties|length }} ties that required extra time after 180 minutes were completed.{% endblock %}
+{% block nosubhead %}{% endblock %}
+{% block desc %}A list of {{ ties|length }} ties that required extra time after both legs were completed.{% endblock %}
