--- a/pages/winprob/templates/agr_list.html
+++ b/pages/winprob/templates/agr_list.html
@@ -1,5 +1,10 @@
-{% extends "ties_list.html" %}
+{% extends "base.html" %}
 
 {% block title %}Ties decided by away-goals rule{% endblock %}
 {% block headline %}Away-goals rule{% endblock %}
-{% block description %}A list of {{ ties|length }} ties where the away-goals broke a deadlock in scoring.{% endblock %}
+{% block nosubhead %}{% endblock %}
+{% block desc %}A list of {{ ties|length }} ties where the away-goals rule broke a deadlock in scoring.{% endblock %}
+
+{% block content %}
+  {% include "tie_loop.html" %}
+{% endblock %}
