--- a/pages/winprob/templates/pk_list.html
+++ b/pages/winprob/templates/pk_list.html
@@ -2,4 +2,5 @@
 
 {% block title %}Ties decided by penalty kick shootouts{% endblock %}
 {% block headline %}Penalty kick shootouts{% endblock %}
-{% block description %}A list of {{ ties|length }} ties that required a penalty kick shootout.{% endblock %}
+{% block nosubhead %}{% endblock %}
+{% block desc %}A list of {{ ties|length }} ties that required a penalty kick shootout.{% endblock %}
