--- a/pages/winprob/templates/base.html
+++ b/pages/winprob/templates/base.html
@@ -34,6 +34,17 @@
     </nav>
 
     <div class='content'>
+      <div class='container'>
+        <h1>{% block headline %}{% endblock %}</h1>
+
+        {% block nosubhead %}
+        <h2>{% block subhead %}{% endblock %}</h2>
+        {% endblock %}
+
+        {% block nodesc %}
+        <p>{% block desc %}{% endblock %}</p>
+        {% endblock %}
+
         {% block content %}
         {% endblock %}
       </div>
