--- a/pages/winprob/templates/base.html
+++ b/pages/winprob/templates/base.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="{% url 'tieshome' %}">Ties</a>
           </li>
           <li class="nav-item {% block goalsactive %}{% endblock %}">
-            <a class="nav-link" href="">Goals</a>
+            <a class="nav-link" href="{% url 'goalslist' %}">Goals</a>
           </li>
           {% comment %}
           <li class="nav-item {% block seasonsactive %}{% endblock %}">
