--- a/pages/winprob/templates/base.html
+++ b/pages/winprob/templates/base.html
@@ -1,50 +1,56 @@
 {% load static %}
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class='h-100'>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Ryan Menezes">
+    <meta name="description" content="">
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     {% block extracss %}
     {% endblock %}
 
-    <title>{% block title %}{% endblock %} - Win probability</title>
+    <title>{% block title %}{% endblock %} - tiepredict</title>
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="{% url 'homepage' %}">Win probability</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <body class='d-flex flex-column h-100'>
+    <header>
+      {% block nav %}
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="{% url 'homepage' %}">tiepredict</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item {% block aboutactive %}{% endblock %}">
-            <a class="nav-link" href="{% url 'postdetail' 'about' %}">About</a>
-          </li>
-          <li class="nav-item {% block teamsactive %}{% endblock %}">
-            <a class="nav-link" href="{% url 'teamlist' %}">Teams</a>
-          </li>
-          <li class="nav-item {% block tiesactive %}{% endblock %}">
-            <a class="nav-link" href="{% url 'tieshome' %}">Ties</a>
-          </li>
-          <li class="nav-item {% block goalsactive %}{% endblock %}">
-            <a class="nav-link" href="{% url 'goalslist' %}">Goals</a>
-          </li>
-          {% comment %}
-          <li class="nav-item {% block seasonsactive %}{% endblock %}">
-            <a class="nav-link" href="{% url 'seasonlist' %}">Seasons</a>
-          </li>
-          {% endcomment %}
-        </ul>
-      </div>
-    </nav>
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item {% block aboutactive %}{% endblock %}">
+              <a class="nav-link" href="{% url 'postdetail' 'about' %}">About</a>
+            </li>
+            <li class="nav-item {% block teamsactive %}{% endblock %}">
+              <a class="nav-link" href="{% url 'teamlist' %}">Teams</a>
+            </li>
+            <li class="nav-item {% block tiesactive %}{% endblock %}">
+              <a class="nav-link" href="{% url 'tieshome' %}">Ties</a>
+            </li>
+            <li class="nav-item {% block goalsactive %}{% endblock %}">
+              <a class="nav-link" href="{% url 'goalslist' %}">Goals</a>
+            </li>
+            {% comment %}
+            <li class="nav-item {% block seasonsactive %}{% endblock %}">
+              <a class="nav-link" href="{% url 'seasonlist' %}">Seasons</a>
+            </li>
+            {% endcomment %}
+          </ul>
+        </div>
+      </nav>
+      {% endblock %}
+    </header>
 
-    <div class='content'>
+    <main role="main" class="flex-shrink-0">
       {% block overridecontainer %}
       <div class='container'>
         <h1>{% block headline %}{% endblock %}</h1>
@@ -61,7 +67,18 @@
         {% endblock %}
       </div>
       {% endblock %}
-    </div>
+    </main>
+
+    {% block footer %}
+    <footer class="footer mt-auto py-3" style="background-color:#f5f5f5;">
+      <div class="container text-muted">
+        <p><a href="#">Back to top</a></p>
+        <p><a href='{% url 'postdetail' 'about' %}'>About this project</a></p>
+        <p>Match data from <a href='https://fbref.com/en/'>FBref</a>. Odds data from <a href='https://www.oddsportal.com/'>Odds Portal</a>. Flag icons from <a href='https://www.flaticon.com/packs/rectangular-country-simple-flags'>Flaticon</a>.</p>
+        <p>Data analysis, web development and digital design by Ryan Menezes. Source code and data files on <a href='https://github.com/ryanvmenezes/futbol-winprob-model'>GitHub</a>, released under the MIT License.</p>
+      </div>
+    </footer>
+    {% endblock %}
 
     <script src="{% static 'js/jquery-3.5.1.slim.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
